# microcapital

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: app.rs  bounds.rs  capital_xml.rs  lib.rs  main.rs  model.rs  outline.rs  schematic_view.rs  symbol_lib.rs
src/capital_xml/: diagram_content.rs
