[package]
name = "microcapital"
version = "0.1.0"
edition = "2021"
description = "WASM Rust egui application"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "microcapital-app"
path = "src/main.rs"

[dependencies]
eframe = "0.33"
egui = "0.33"
earcutr = "0.5"
egui_dock = "0.18"
hard-xml = "1.41"
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "CssStyleDeclaration"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
